Still trying to fix scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -8,7 +8,11 @@ body {
   background-repeat: no-repeat;
 }
 
-
+@media (max-width: 300px) {
+  body {
+    background-attachment: scroll;
+  }
+}
 
 #nav-bar {
   text-align: center;
